Fixed dimension topbar group

--- a/PianoRoll/src/resources/lang/app_string_it_IT.properties
+++ b/PianoRoll/src/resources/lang/app_string_it_IT.properties
@@ -1,5 +1,9 @@
-# General
+# To change this license header, choose License Headers in Project Properties.
+# To change this template file, choose Tools | Templates
+# and open the template in the editor.
 SALVA = Salva
-
-# Success Messages
 CONFIGURAZIONE_SALVATA = Configurazione salvata correttamente
+TASTI = Tasti
+BPM = Bpm
+FREQ_MIN = Min. Freq.
+FREQ_MAX = Max. Freq.
