Correzione gestione score

--- a/PianoRoll/src/resources/lang/app_string_it_IT.properties
+++ b/PianoRoll/src/resources/lang/app_string_it_IT.properties
@@ -4,6 +4,7 @@
 SALVA = Salva
 CONFIGURAZIONE_SALVATA = Configurazione salvata correttamente
 TASTI = Tasti
+MISURE = Misure
 BPM = Bpm
 FREQ_MIN = Min. Freq.
 FREQ_MAX = Max. Freq.
